questa foto metti - Follow Up Deployment

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </a>
                 </div>
                 <div class="md:w-1/2" data-aos="fade-left">
-                    <img src="http://static.photos/technology/640x360/1" alt="Digital Marketing" class="rounded-lg shadow-2xl">
+                    <img src="https://huggingface.co/spaces/barros775148/mio-sito/resolve/main/images/Immagine%20WhatsApp%202025-09-03%20ore%2019.26.29_a3fd7261.jpg" alt="Esperto di Siti Web e QR Code" class="rounded-lg shadow-2xl">
                 </div>
             </div>
         </div>
@@ -88,8 +88,8 @@
                     <div class="text-primary mb-4">
                         <i data-feather="bar-chart-2" class="w-12 h-12"></i>
                     </div>
-                    <h3 class="text-xl font-bold mb-3">Online Advertising</h3>
-                    <p class="text-gray-600">Campagne pubblicitarie su Google e Social Network per generare lead e vendite.</p>
+                    <h3 class="text-xl font-bold mb-3">Sviluppo Web Avanzato</h3>
+                    <p class="text-gray-600">Siti web performanti con CMS personalizzati, e-commerce e soluzioni su misura per ogni esigenza aziendale.</p>
                 </div>
                 <!-- Service 3 -->
                 <div class="bg-white p-8 rounded-xl shadow-md service-card transition duration-300" data-aos="fade-up" data-aos-delay="300">
@@ -104,8 +104,8 @@
                     <div class="text-primary mb-4">
                         <i data-feather="maximize-2" class="w-12 h-12"></i>
                     </div>
-                    <h3 class="text-xl font-bold mb-3">Generazione QR Code</h3>
-                    <p class="text-gray-600">QR code personalizzati e tracciabili per brochure, menu o volantini, per collegare istantaneamente il mondo fisico al tuo digitale.</p>
+                    <h3 class="text-xl font-bold mb-3">QR Code Professionali</h3>
+                    <p class="text-gray-600">Soluzioni complete per aziende: QR code personalizzati con logo, tracciamento analytics e landing page dedicate per massimizzare le conversioni.</p>
                 </div>
             </div>
         </div>
@@ -230,6 +230,7 @@
                 <div class="mb-6 md:mb-0">
                     <p class="text-xl font-bold mb-2">Digital Marketing Expert</p>
                     <p class="text-gray-400">+39 380 693 0434</p>
+                    <p class="text-gray-400">bottaroriccardo.marketing@gmail.com</p>
                 </div>
                 <div class="flex flex-col items-center">
                     <div class="mb-4 bg-white p-2 rounded">
