ho detto di cambiare le testimonianze e di mettere più cose sui siti web, aggiungi anche che 2 sono a 4 stelle e 1 a 5 stelle - Follow Up Deployment

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <i data-feather="globe" class="w-12 h-12"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-3">Siti Web Moderni</h3>
-                    <p class="text-gray-600">Siti veloci, responsive e conversion-oriented, progettati per attrarre clienti.</p>
+                    <p class="text-gray-600">Siti web performanti, responsive e ottimizzati per la conversione, con design personalizzato, SEO integrato e sistemi di gestione avanzati. Soluzioni complete per e-commerce, landing page e portali aziendali con aree riservate.</p>
                 </div>
                 <!-- Service 2 -->
                 <div class="bg-white p-8 rounded-xl shadow-md service-card transition duration-300" data-aos="fade-up" data-aos-delay="200">
@@ -160,14 +160,14 @@
                         <i data-feather="star" class="text-yellow-400 w-5 h-5"></i>
                         <i data-feather="star" class="text-yellow-400 w-5 h-5"></i>
                         <i data-feather="star" class="text-yellow-400 w-5 h-5"></i>
-                        <i data-feather="star" class="text-yellow-400 w-5 h-5"></i>
+                        <i data-feather="star" class="text-gray-300 w-5 h-5"></i>
                     </div>
-                    <p class="text-gray-600 mb-6">"Il sito che ha realizzato per me ha aumentato le prenotazioni del 30% in un mese. Serio e preparato!"</p>
+                    <p class="text-gray-600 mb-6">"Il sito e-commerce realizzato ha triplicato le mie vendite online in 3 mesi. Ottima struttura e design accattivante!"</p>
                     <div class="flex items-center">
-                        <img src="http://static.photos/people/200x200/1" alt="Anna" class="w-12 h-12 rounded-full mr-4">
+                        <img src="http://static.photos/people/200x200/1" alt="Paolo" class="w-12 h-12 rounded-full mr-4">
                         <div>
-                            <h4 class="font-bold">Anna</h4>
-                            <p class="text-gray-500 text-sm">Ristorante Bella Vista</p>
+                            <h4 class="font-bold">Paolo</h4>
+                            <p class="text-gray-500 text-sm">Negozio di Elettronica</p>
                         </div>
                     </div>
                 </div>
@@ -178,14 +178,14 @@
                         <i data-feather="star" class="text-yellow-400 w-5 h-5"></i>
                         <i data-feather="star" class="text-yellow-400 w-5 h-5"></i>
                         <i data-feather="star" class="text-yellow-400 w-5 h-5"></i>
-                        <i data-feather="star" class="text-yellow-400 w-5 h-5"></i>
+                        <i data-feather="star" class="text-gray-300 w-5 h-5"></i>
                     </div>
-                    <p class="text-gray-600 mb-6">"Le campagne pubblicitarie hanno portato clienti qualificati fin dal primo giorno. Risultati eccezionali!"</p>
+                    <p class="text-gray-600 mb-6">"Sito web veloce e moderno con sistema di prenotazioni integrato. I clienti lo trovano intuitivo e facile da usare."</p>
                     <div class="flex items-center">
-                        <img src="http://static.photos/people/200x200/2" alt="Marco" class="w-12 h-12 rounded-full mr-4">
+                        <img src="http://static.photos/people/200x200/2" alt="Elena" class="w-12 h-12 rounded-full mr-4">
                         <div>
-                            <h4 class="font-bold">Marco</h4>
-                            <p class="text-gray-500 text-sm">Azienda di Servizi</p>
+                            <h4 class="font-bold">Elena</h4>
+                            <p class="text-gray-500 text-sm">Centro Benessere</p>
                         </div>
                     </div>
                 </div>
@@ -198,12 +198,12 @@
                         <i data-feather="star" class="text-yellow-400 w-5 h-5"></i>
                         <i data-feather="star" class="text-yellow-400 w-5 h-5"></i>
                     </div>
-                    <p class="text-gray-600 mb-6">"Il rebranding ha cambiato completamente l'immagine della mia attività. Professionalità e creatività al top!"</p>
+                    <p class="text-gray-600 mb-6">"Il portale aziendale con area riservata per i clienti ha rivoluzionato il nostro modo di lavorare. Assistenza continua e soluzioni personalizzate."</p>
                     <div class="flex items-center">
-                        <img src="http://static.photos/people/200x200/3" alt="Laura" class="w-12 h-12 rounded-full mr-4">
+                        <img src="http://static.photos/people/200x200/3" alt="Roberto" class="w-12 h-12 rounded-full mr-4">
                         <div>
-                            <h4 class="font-bold">Laura</h4>
-                            <p class="text-gray-500 text-sm">Boutique di Moda</p>
+                            <h4 class="font-bold">Roberto</h4>
+                            <p class="text-gray-500 text-sm">Studio Legale</p>
                         </div>
                     </div>
                 </div>
